@@ -7,7 +7,7 @@ OVERVIEW
     3.08.1, 3.08.2, 3.08.3, 3.08.4, 3.09.0, 3.09.1, 3.09.2, 3.09.3, 3.10,
     3.10.0, 3.11.
 
-  This camlp4 version is 4.03.
+  This camlp4 version is 4.04-exp.
 
 INSTALL
 
