@@ -1,3 +1,8 @@
+Camlp4s Version 4.04:
+---------------------
+
+* [11 Jul 07] Fixed compilation problems with ocaml version 3.08.1.
+
 Camlp4s Version 4.03:
 ---------------------
 
